<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_i18n_ad_no_data">Oops, this video is not here anymore. Take a break and come back later</string>
    <string name="ad_i18n_exit">Exit</string>
    <string name="addon_bonus_text_br">Resgatar Recompensas</string>
    <string name="addon_bonus_text_id">Dapatkan Hadiah</string>
    <string name="addon_bonus_text_us">Get</string>
    <string name="addon_clear_text_br">Excluir</string>
    <string name="addon_clear_text_id">Hapus</string>
    <string name="addon_clear_text_us">Delete</string>
    <string name="addon_schedule_text_br">Agora mesmo!</string>
    <string name="addon_schedule_text_id">Sekarang juga!</string>
    <string name="addon_schedule_text_us">Now!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Merge Fruit Master</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="bigo_ad_form_cancel">Cancel</string>
    <string name="bigo_ad_form_privacy_content">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="bigo_ad_form_privacy_notice">Privacy Notice</string>
    <string name="bigo_ad_form_question_hint">Please Enter</string>
    <string name="bigo_ad_form_submit">Submit</string>
    <string name="bigo_ad_form_warning">The answer is required</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_ic_recommended">Recommended</string>
    <string name="bigo_ad_ic_web">Web</string>
    <string name="bigo_ad_interaction_jump_hint">Jump to details page or third party app</string>
    <string name="bigo_ad_interaction_shake">Shake</string>
    <string name="bigo_ad_interaction_slide">Slide</string>
    <string name="bigo_ad_interaction_twist">Twist</string>
    <string name="bigo_ad_link_copied">Link copied</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_multi_img_more_text">MORE</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_splash_skip_after">Skip after</string>
    <string name="bigo_ad_tag">Ad</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_forward">bigo_ad_tag_forward</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="bigo_ad_webview_loading">Loading</string>
    <string name="bigo_ad_word_icon_guid">Apps you may like</string>
    <string name="bonus_notification_btn_br">Vamos!</string>
    <string name="bonus_notification_btn_id">Mulai!</string>
    <string name="bonus_notification_btn_us">Ok!</string>
    <string name="bonus_notification_title_br">Resgate recompensa</string>
    <string name="bonus_notification_title_id">Klaim hadiahmu</string>
    <string name="bonus_notification_title_us">Claim reward</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browser_hostname_content_description">Host name</string>
    <string name="btn_browser_backward_content_description">Backward</string>
    <string name="btn_browser_close_content_description">Close</string>
    <string name="btn_browser_forward_content_description">Forward</string>
    <string name="btn_browser_open_content_description">Open in external browser</string>
    <string name="btn_browser_refresh_content_description">Refresh</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_button_description">Close</string>
    <string name="close_card_votes">( %1$d )</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="com_moloco_sdk_xenoss_player_learn_more">Learn more</string>
    <string name="com_moloco_sdk_xenoss_player_skip">Skip</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="learn_more">Learn More</string>
    <string name="learn_more_default_content_desc">default-default</string>
    <string name="learn_more_icon_default">default</string>
    <string name="smaato_sdk_core_browser_hostname_content_description">Host name</string>
    <string name="smaato_sdk_core_btn_browser_backward_content_description">Backward</string>
    <string name="smaato_sdk_core_btn_browser_close_content_description">Close</string>
    <string name="smaato_sdk_core_btn_browser_forward_content_description">Forward</string>
    <string name="smaato_sdk_core_btn_browser_open_content_description">Open in external browser</string>
    <string name="smaato_sdk_core_btn_browser_refresh_content_description">Refresh</string>
</resources>