<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#80000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/bigo_ad_cardview_bg" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="168.0dip" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:layout_marginHorizontal="48.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ff333333" android:ellipsize="end" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="24.0dip" android:text="@string/bigo_ad_skip_video" android:lines="1" android:fontFamily="sans-serif-medium" android:layout_marginHorizontal="24.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="#ff888888" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip" android:text="@string/bigo_ad_lose_reward" android:layout_below="@id/title" android:layout_marginHorizontal="24.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="#ff888888" android:gravity="center" android:id="@id/bigo_ad_btn_skip" android:layout_width="75.0dip" android:layout_height="36.0dip" android:text="@string/bigo_ad_skip" android:lines="1" android:layout_alignTop="@id/bigo_ad_btn_resume" android:fontFamily="sans-serif-medium" android:layout_toStartOf="@id/bigo_ad_btn_resume" />
        <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:id="@id/bigo_ad_btn_resume" android:background="@drawable/bigo_ad_button_bg_rectangle_blue" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_margin="8.0dip" android:layout_marginRight="10.0dip" android:text="@string/bigo_ad_resume" android:lines="1" android:layout_alignParentBottom="true" android:fontFamily="sans-serif-medium" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" android:paddingHorizontal="12.0dip" />
    </RelativeLayout>
</FrameLayout>