<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/btnLayoutTop" android:background="@drawable/smaato_sdk_core_browser_top_button_layout_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <RelativeLayout android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingRight="10.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/btnClose" android:background="@drawable/smaato_sdk_core_ic_browser_background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/smaato_sdk_core_btn_browser_close_content_description" android:layout_alignParentStart="true" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/btnRefresh" android:layout_toRightOf="@id/btnClose" android:layout_centerInParent="true" android:layout_centerVertical="true" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_toStartOf="@id/btnRefresh" android:layout_toEndOf="@id/btnClose">
                <TextView android:textSize="16.0sp" android:textColor="@color/smaato_sdk_core_ui_ctrl_black" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/tvHostname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:drawablePadding="2.0dip" android:contentDescription="@string/smaato_sdk_core_browser_hostname_content_description" android:textAlignment="center" />
            </LinearLayout>
            <ImageView android:id="@id/btnRefresh" android:background="@drawable/smaato_sdk_core_ic_browser_background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/smaato_sdk_core_btn_browser_refresh_content_description" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <ProgressBar android:id="@id/progressBar" android:layout_width="fill_parent" android:layout_height="3.0dip" android:max="100" style="@style/smaato_sdk_core_browserProgressBar" />
    </LinearLayout>
    <com.smaato.sdk.core.webview.BaseWebView android:id="@id/webView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/btnLayoutBottom" android:layout_below="@id/btnLayoutTop" />
    <RelativeLayout android:id="@id/btnLayoutBottom" android:background="@drawable/smaato_sdk_core_browser_bottom_button_layout_bg" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingRight="10.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/btnBackward" android:background="@drawable/smaato_sdk_core_ic_browser_background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/smaato_sdk_core_ic_browser_backward_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/smaato_sdk_core_btn_browser_backward_content_description" android:layout_alignParentStart="true" />
        <ImageView android:id="@id/btnForward" android:background="@drawable/smaato_sdk_core_ic_browser_background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:src="@drawable/smaato_sdk_core_ic_browser_forward_selector" android:layout_toRightOf="@id/btnBackward" android:layout_centerVertical="true" android:contentDescription="@string/smaato_sdk_core_btn_browser_forward_content_description" android:layout_marginStart="20.0dip" android:layout_toEndOf="@id/btnBackward" />
        <ImageView android:id="@id/btnOpenExternal" android:background="@drawable/smaato_sdk_core_ic_browser_background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/smaato_sdk_core_btn_browser_open_content_description" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>