<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="end|bottom|center" android:orientation="horizontal" android:id="@id/openUrlLayout" android:background="@drawable/open_url_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginEnd="8.0dip">
        <ImageView android:id="@id/openURLOldIcon" android:paddingTop="0.0dip" android:paddingBottom="0.0dip" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="36.0dip" android:layout_height="fill_parent" android:src="@mipmap/redirectios" android:scaleType="fitEnd" android:tint="@color/learn_more_white" android:contentDescription="@string/learn_more_icon_default" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/learn_more_white" android:id="@id/openURL" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/learn_more" android:contentDescription="@string/learn_more_default_content_desc" android:textAllCaps="false" android:paddingStart="0.0dip" android:paddingEnd="8.0dip" />
        <ImageView android:id="@id/openURLIcon" android:paddingTop="8.0dip" android:paddingBottom="6.0dip" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@mipmap/redirect" android:scaleType="fitStart" android:tint="@color/learn_more_black" android:contentDescription="@string/learn_more_icon_default" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" />
    </LinearLayout>
</FrameLayout>