<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/inter_title_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip">
        <sg.bigo.ads.common.view.RoundedImageView android:id="@id/inter_icon" android:layout_width="48.0dip" android:layout_height="48.0dip" />
        <TextView android:textSize="20.0sp" android:textColor="#ff333333" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/inter_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bigo_ad_title_default" android:maxLines="1" android:fontFamily="sans-serif-medium" android:layout_marginStart="12.0dip" android:layout_toEndOf="@id/inter_icon" />
        <TextView android:textSize="13.0sp" android:textColor="#b3333333" android:ellipsize="end" android:gravity="left" android:id="@id/inter_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/bigo_ad_description_default" android:maxLines="1" android:layout_below="@id/inter_title" android:layout_toEndOf="@id/inter_icon" android:layout_alignStart="@id/inter_title" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_below="@id/inter_title_container">
        <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/inter_btn_cta_main" android:background="#ff00cc44" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/bigo_ad_cta_default" android:maxLines="1" android:layout_weight="1.0" android:textAllCaps="false" />
        <View android:visibility="invisible" android:layout_width="8.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/inter_btn_cta" android:background="#ff009dff" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/bigo_ad_cta_default" android:maxLines="1" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>