<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/inter_layout_end_page" android:background="#30000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/inter_end_page" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <sg.bigo.ads.common.view.RoundedFrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="16.0dip" app:bigo_ad_radius="6.0dip"
              xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
                <ImageView android:id="@id/inter_icon" android:layout_width="80.0dip" android:layout_height="80.0dip" />
            </sg.bigo.ads.common.view.RoundedFrameLayout>
            <TextView android:textSize="20.0sp" android:textColor="#ff333333" android:ellipsize="end" android:gravity="center" android:id="@id/inter_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/bigo_ad_title_default" android:maxLines="2" android:fontFamily="sans-serif-medium" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
            <TextView android:textSize="13.0sp" android:textColor="#ff888888" android:ellipsize="end" android:gravity="center" android:id="@id/inter_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/bigo_ad_description_default" android:maxLines="2" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="#ffaeb3b7" android:ellipsize="end" android:gravity="center" android:id="@id/inter_advertiser" android:background="@drawable/bigo_ad_advertiser_background" android:paddingLeft="2.0dip" android:paddingTop="4.0dip" android:paddingRight="2.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-7.0dip" android:layout_marginBottom="20.0dip" android:maxWidth="340.0dip" android:text="bigoad.com" android:maxLines="1" />
            <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/inter_btn_cta" android:background="@drawable/bigo_ad_button_bg_rectangle_blue" android:layout_width="fill_parent" android:layout_height="43.5dip" android:layout_marginBottom="16.0dip" android:text="@string/bigo_ad_cta_default" android:maxLines="1" android:textAllCaps="false" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
            <TextView android:textSize="13.0sp" android:textColor="#ffd8d8d8" android:ellipsize="end" android:gravity="center" android:id="@id/inter_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="" android:maxLines="2" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        </LinearLayout>
        <TextView android:textSize="9.0sp" android:textColor="#ccffffff" android:gravity="center" android:id="@id/inter_ad_label" android:background="@drawable/bigo_ad_tag_background" android:paddingLeft="3.0dip" android:paddingTop="1.0dip" android:paddingRight="3.0dip" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bigo_ad_tag" />
        <sg.bigo.ads.api.AdOptionsView android:layout_gravity="end|bottom|center" android:id="@id/inter_options" android:layout_width="16.0dip" android:layout_height="16.0dip" />
    </FrameLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/inter_layout_playable_loading" android:paddingTop="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/inter_end_page" android:layout_centerHorizontal="true">
        <ProgressBar android:layout_width="16.0dip" android:layout_height="16.0dip" android:indeterminateDrawable="@drawable/bigo_ad_progressbar_white" />
        <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="Playable ad will be shown soon" android:maxLines="1" />
    </LinearLayout>
    <FrameLayout android:id="@id/word_icon_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</RelativeLayout>